--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(10, 1fr);
   text-align: center;
+  padding-top: 30px;
+  padding-left: 0px;
+  border: 1px black solid
 }
 
 .App-logo {
@@ -20,3 +26,82 @@
 .App-link {
   color: #09d3ac;
 }
+
+.Logo {
+  grid-column: 1/1;
+  grid-row: 1/1;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  border: 1px black solid
+}
+
+.SearchBar {
+  grid-column: 2/5;
+  grid-row: 1/1;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  border: 1px black solid
+}
+
+.ArticlesHeader {
+  grid-column: 1/3;
+  grid-row: 2/2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  border: 1px black solid
+}
+
+.ArticlesList {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+  overflow: hidden;
+  overflow-y:scroll;
+  height:700px;
+  grid-column: 1/4;
+  grid-row: 3/9;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  border: 1px black solid
+}
+
+.Sort {
+  grid-column: 3/5;
+  grid-row: 2/2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  border: 1px black solid
+}
+
+.ListItemEven {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  list-style: none;
+  background: #f0fafd;
+  width: 3fr;
+  height: 3fr;
+  text-align: center;
+  border-radius: 2mm;
+  align-content: center;
+  font-size: 15px;
+  border: 1px black solid
+}
+
+.ListItemOdd {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  list-style: none;
+  width: 3fr;
+  height: 3fr;
+  text-align: center;
+  border-radius: 2mm;
+  background:white;
+  align-content: center;
+  font-size: 15px;
+  border: 1px black solid
+}
+
+
