--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
 .App {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 6fr 1fr;
   text-align: center;
   padding-top: 30px;
   padding-left: 0px;
-  border: 1px black solid
+  border: 1px black solid;
+  height: 100vh;
 }
 
 .App-logo {
   height: 40vmin;
+}
+
+.Main {
+  grid-column: 1/3;
+  grid-row: 2/3;
 }
 
 .App-header {
@@ -28,27 +34,33 @@
 }
 
 .Logo {
-  grid-column: 1/1;
-  grid-row: 1/1;
+  grid-column: 1/2;
+  grid-row: 1/2;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   border: 1px black solid
 }
 
 .SearchBar {
-  grid-column: 2/5;
-  grid-row: 1/1;
+  grid-column:2/5;
+  grid-row: 1/2;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   border: 1px black solid
 }
 
+.ArticleDiv {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 5fr 1fr;
+}
+
 .ArticlesHeader {
   grid-column: 1/3;
-  grid-row: 2/2;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
-  border: 1px black solid
+  border: 1px black solid;
+  width: 1fr;
 }
 
 .ArticlesList {
@@ -60,18 +72,17 @@
   overflow-y:scroll;
   height:700px;
   grid-column: 1/4;
-  grid-row: 3/9;
+  grid-row: 2/9;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   border: 1px black solid
 }
 
 .Sort {
-  grid-column: 3/5;
-  grid-row: 2/2;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
-  border: 1px black solid
+  border: 1px black solid;
+  grid-column: 3/5;
 }
 
 .ListItemEven {
