--- a/src/App.css
+++ b/src/App.css
@@ -52,13 +52,26 @@
 .ArticleDiv {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 5fr 1fr;
+  grid-template-rows: 1fr 1fr 4fr 1fr;
 }
 
 .ArticlesHeader {
   grid-column: 1/3;
+  grid-row: 1/1;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
+  height: 100px;
+  border: 1px black solid;
+  width: 1fr;
+}
+
+.IndividualHeader {
+  grid-column: 1/4;
+  grid-row: 1/1;
+  display:grid;
+  grid-template-rows: 15px 15px 12px 5px;
+  grid-row-gap: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100px;
   border: 1px black solid;
   width: 1fr;
 }
@@ -76,6 +89,82 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   border: 1px black solid
+}
+
+.ArticleBody {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+  overflow: hidden;
+  overflow-y:scroll;
+  grid-column: 1/3;
+  grid-row: 4/5;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  border: 1px black solid
+}
+
+.ArticleTitle {
+  grid-column: 1/3;
+  grid-row: 1/1;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  text-align: left;
+}
+
+.ArticleAuthor {
+  grid-row: 2/2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  text-align: left
+}
+
+.ArticleTopic {
+  grid-column: 1/2;
+  grid-row: 3/3;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  width: 1fr;
+  text-align: left;
+}
+
+.ArticleDate {
+  grid-column: 2/4;
+  grid-row: 3/3;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  width: 1fr;
+  text-align: left;
+}
+
+.ArticleVotes {
+  grid-column: 4/4;
+  grid-row: 1/1;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  width: 1fr;
+  text-align: left;
+}
+
+.ArticleBody {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+  overflow: hidden;
+  overflow-y:scroll;
+  height:400px;
+  grid-column: 1/4;
+  grid-row: 2/9;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  border: 1px black solid
+}
+
+.ShowComments {
+  grid-column: 1/1;
+  grid-row: 5/5;
 }
 
 .Sort {
