search by topic in progress

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 6fr 1fr;
+  grid-template-rows: 100px 6fr 1fr;
   text-align: center;
   padding-top: 30px;
   padding-left: 0px;
@@ -38,7 +38,8 @@
   grid-row: 1/2;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
-  border: 1px black solid
+  border: 1px black solid;
+  height: 100px;
 }
 
 .SearchBar {
@@ -46,13 +47,16 @@
   grid-row: 1/2;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
-  border: 1px black solid
+  border: 1px black solid;
+  height: 100px;
 }
 
 .ArticleDiv {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 4fr 1fr;
+  grid-template-rows: 1fr repeat(1fr 4) 1fr;
+  grid-column-gap: 5px;
+  grid-row:2/3;
 }
 
 .ArticlesHeader {
@@ -61,7 +65,16 @@
   font-family: Arial, Helvetica, sans-serif;
   height: 100px;
   border: 1px black solid;
-  width: 1fr;
+  font-size: 30px;
+}
+
+.Sort {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  border: 1px black solid;
+  grid-column: 3/5;
+  grid-row: 1/1;
+  height: 100px;
 }
 
 .IndividualHeader {
@@ -73,7 +86,6 @@
   font-family: Arial, Helvetica, sans-serif;
   height: 100px;
   border: 1px black solid;
-  width: 1fr;
 }
 
 .ArticlesList {
@@ -99,7 +111,7 @@
   overflow: hidden;
   overflow-y:scroll;
   grid-column: 1/3;
-  grid-row: 4/5;
+  grid-row: 2/5;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   border: 1px black solid
@@ -154,24 +166,44 @@
   /* justify-content: center; */
   overflow: hidden;
   overflow-y:scroll;
-  height:400px;
+  height:500px;
   grid-column: 1/4;
-  grid-row: 2/9;
+  grid-row: 2/2;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   border: 1px black solid
 }
 
 .ShowComments {
-  grid-column: 1/1;
-  grid-row: 5/5;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 2fr;
+  grid-column: 4/4;
+  grid-row: 1/3;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  border: 1px black solid;
 }
 
-.Sort {
+.CommentList {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+  overflow: hidden;
+  overflow-y:scroll;
+  height: 545px;
+  grid-column: 1/1;
+  grid-row: 1/1;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
+  font-size: 15px;
   border: 1px black solid;
-  grid-column: 3/5;
+}
+
+.ShowCommentsButton {
+  grid-column: 1/1;
+  grid-row: 1/2;
 }
 
 .Loading {
