--- a/src/App.css
+++ b/src/App.css
@@ -70,11 +70,18 @@
 
 .Sort {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
+  font-size: 15px;
   border: 1px black solid;
-  grid-column: 3/5;
+  grid-column: 3/4;
   grid-row: 1/1;
   height: 100px;
+  display:grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr
+}
+
+.SortBy {
+  grid-row: 1/1;
 }
 
 .IndividualHeader {
