--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
+* {
+  padding: 0px;
+  margin: 0px;
+}
+
 .App {
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 100px 6fr 1fr;
   text-align: center;
-  padding-top: 30px;
-  padding-left: 0px;
   border: 1px black solid;
   height: 100vh;
 }
@@ -102,7 +105,7 @@
   /* justify-content: center; */
   overflow: hidden;
   overflow-y:scroll;
-  height:700px;
+  height: 541px;
   grid-column: 1/4;
   grid-row: 2/9;
   font-family: Arial, Helvetica, sans-serif;
@@ -113,8 +116,6 @@
 .ArticleBody {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  /* justify-content: center; */
   overflow: hidden;
   overflow-y:scroll;
   grid-column: 1/3;
@@ -200,9 +201,9 @@
   /* justify-content: center; */
   overflow: hidden;
   overflow-y:scroll;
-  height: 545px;
-  grid-column: 1/1;
-  grid-row: 1/1;
+  height: 500px;
+  grid-column: 4/4;
+  grid-row: 2/2;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   border: 1px black solid;
@@ -229,7 +230,7 @@
   border-radius: 2mm;
   align-content: center;
   font-size: 15px;
-  border: 1px black solid
+  /* border: 1px black solid */
 }
 
 .ListItemOdd {
@@ -244,7 +245,7 @@
   background:white;
   align-content: center;
   font-size: 15px;
-  border: 1px black solid
+  /* border: 1px black solid */
 }
 
 
