--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@
   height: 40vmin;
 }
 
+.UserText {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+}
+
 .Main {
   grid-column: 1/6;
   grid-row: 2/3;
