--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 100px 6fr 1fr;
   text-align: center;
-  border: 1px black solid;
+  /* border: 1px black solid; */
   height: 100vh;
 }
 
@@ -26,15 +26,16 @@
   grid-row: 2/3;
 }
 
-.App-header {
-  background-color: #282c34;
+.App-Header {
+  background-color:  #e6f4f8;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  display: grid;
+  grid-template-columns: repeat(5 1fr);
+  grid-template-rows: 100px;
   color: white;
+  grid-row: 1/1;
+  grid-column: 1/6;
+
 }
 
 .App-link {
@@ -42,47 +43,61 @@
 }
 
 .Logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   grid-column: 1/2;
-  grid-row: 1/2;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  border: 1px black solid;
+  grid-row: 1/1;
+  font-family: 'Alata', sans-serif;
+  font-size: 50px;
+  color: dimgrey;
+  /* border: 1px black solid; */
   height: 100px;
+  width: 1fr;
+  text-align: center;
+  
 }
 
 .HomeButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   grid-column: 2/3;
-  grid-row: 1/2;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  border: 1px black solid;
+  grid-row: 1/1;
+  font-family: 'Alata', sans-serif;
+  font-size: 40px;
+  /* border: 1px black solid; */
   height: 100px;
+  text-decoration: none;
 }
 
 .SearchBar {
   grid-column:3/4;
-  grid-row: 1/2;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  border: 1px black solid;
+  grid-row: 1/1;
+  font-family: 'Alata', sans-serif;
+  font-size: 20px;
+  /* border: 1px black solid; */
   height: 100px;
 }
 
 .Username {
   grid-column: 4/5;
-  grid-row: 1/2;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  border: 1px black solid;
-  height: 100px;
+  grid-row: 1/1;
+  font-family: 'Alata', sans-serif;
+  font-size: 40px;
+  /* border: 1px black solid; */
+  color: dimgrey;
+  /* height: 100px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .Login {
   grid-column: 5/6;
-  grid-row: 1/2;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  border: 1px black solid;
+  grid-row: 1/1;
+  font-family: 'Alata', sans-serif;  font-size: 30px;
+  /* border: 1px black solid; */
   height: 100px;
 }
 
@@ -96,16 +111,18 @@
 .ArticlesHeader {
   grid-column: 1/3;
   grid-row: 1/1;
-  font-family: Arial, Helvetica, sans-serif;
-  height: 100px;
-  border: 1px black solid;
-  font-size: 30px;
+  font-family: 'Alata', sans-serif;  height: 100px;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  /* border: 1px black solid; */
+  font-size: 50px;
 }
 
 .Sort {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
-  border: 1px black solid;
+  font-family: 'Alata', sans-serif;  font-size: 15px;
+  /* border: 1px black solid; */
   grid-column: 3/4;
   grid-row: 1/1;
   height: 100px;
@@ -124,9 +141,8 @@
   display:grid;
   grid-template-rows: 15px 15px 12px 5px;
   grid-row-gap: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  height: 100px;
-  border: 1px black solid;
+  font-family: 'Alata', sans-serif;  height: 100px;
+  /* border: 1px black solid; */
 }
 
 .ArticlesList {
@@ -134,12 +150,10 @@
   flex-direction: column;
   overflow: hidden;
   overflow-y:scroll;
-  height: 541px;
+  height: 500px;
   grid-column: 1/4;
   grid-row: 2/9;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  border: 1px black solid
+  font-family: 'Alata', sans-serif;  font-size: 30px;
 }
 
 .ArticleBody {
@@ -149,31 +163,27 @@
   overflow-y:scroll;
   grid-column: 1/3;
   grid-row: 2/5;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  border: 1px black solid
+  font-family: 'Alata', sans-serif;  font-size: 12px;
+  /* border: 1px black solid */
 }
 
 .ArticleTitle {
   grid-column: 1/3;
   grid-row: 1/1;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
+  font-family: 'Alata', sans-serif;  font-size: 20px;
   text-align: left;
 }
 
 .ArticleAuthor {
   grid-row: 2/2;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
+  font-family: 'Alata', sans-serif;  font-size: 15px;
   text-align: left
 }
 
 .ArticleTopic {
   grid-column: 1/2;
   grid-row: 3/3;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
+  font-family: 'Alata', sans-serif;  font-size: 12px;
   width: 1fr;
   text-align: left;
 }
@@ -181,8 +191,7 @@
 .ArticleDate {
   grid-column: 2/4;
   grid-row: 3/3;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
+  font-family: 'Alata', sans-serif;  font-size: 12px;
   width: 1fr;
   text-align: left;
 }
@@ -190,8 +199,7 @@
 .ArticleVotes {
   grid-column: 4/4;
   grid-row: 1/1;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
+  font-family: 'Alata', sans-serif;  font-size: 20px;
   width: 1fr;
   text-align: left;
 }
@@ -206,22 +214,35 @@
   height:500px;
   grid-column: 1/4;
   grid-row: 2/2;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  border: 1px black solid
+  font-family: 'Alata', sans-serif;  font-size: 30px;
+  /* border: 1px black solid */
 }
 
 .ShowComments {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 1fr 1fr;
   grid-column: 4/4;
-  grid-row: 1/3;
+  grid-row: 1/2;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  border: 1px black solid;
+  /* border: 1px black solid; */
 }
+
+.CommentsButton {
+  grid-row: 1/2;
+  height: 1fr;
+}
+
+.LeaveComment {
+  grid-column: 1/2;
+  grid-row: 2/2;
+  height: 75px;
+  width: 355px;
+  display: flex;
+}
+
 
 .CommentList {
   display: flex;
@@ -235,7 +256,7 @@
   grid-row: 2/2;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
-  border: 1px black solid;
+  /* border: 1px black solid; */
 }
 
 .ShowCommentsButton {
@@ -249,34 +270,157 @@
 
 .ListItemEven {
   padding: 5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  list-style: none;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   background: #f0fafd;
   width: 3fr;
-  height: 3fr;
+  height: 8%;
+  font-family: 'Alata', sans-serif;
   text-align: center;
   border-radius: 2mm;
   align-content: center;
-  font-size: 13px;
-  /* border: 1px black solid */
 }
 
 .ListItemOdd {
   padding: 5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   list-style: none;
   width: 3fr;
-  height: 3fr;
+  height: 8%;
   text-align: center;
   border-radius: 2mm;
+  font-family: 'Alata', sans-serif;
   background:white;
   align-content: center;
-  font-size: 13px;
-  /* border: 1px black solid */
 }
 
+.ArtCardTitle {
+  grid-column: 1/2;
+  grid-row:1/2;
+  margin-left: 20px;
+  text-align: left;
+  font-size: 20px;
+  color: dimgrey;
+}
 
+.ArtCardAuthorBlock {
+  grid-column: 1/2;
+  grid-row:2/3;
+  text-align: left;
+  font-size: 15px;
+  color: dimgrey;
+  display: grid;
+  margin-left: 20px;
+}
+
+.ArtCardTopic {
+  grid-column: 1/2;
+  grid-row:3/4;
+  margin-left: 20px;
+  text-align: left;
+  font-size: 12px;
+  color: dimgrey;
+}
+
+.ArtCardDate {
+  grid-column: 2/2;
+  grid-row:3/4;
+  margin-left: 20px;
+  text-align: left;
+  font-size: 12px;
+  color: dimgrey;
+}
+
+.ArtCardVotes {
+  grid-column: 2/2;
+  grid-row:1/2;
+  margin-left: 20px;
+  text-align: left;
+  font-size: 10px;
+  color: dimgrey;
+  text-decoration: none;
+  grid-template-columns: 1fr 1fr 1fr
+}
+
+.ArrowUpButton {
+  grid-column: 1/2;
+  background: none;
+  border: none
+}
+
+.ArrowDownButton {
+  grid-column: 3/4;
+  background: none;
+  border: none
+}
+
+.CommentEven {
+  padding: 5px;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 2fr;
+  background: #f0fafd;
+  width: 3fr;
+  font-family: 'Alata', sans-serif;
+  text-align: center;
+  border-radius: 2mm;
+  align-content: center;
+  column-gap: 0px;
+}
+
+.CommentOdd {
+  padding: 5px;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 2fr;
+  background: white;
+  width: 3fr;
+  /* height: 8%; */
+  font-family: 'Alata', sans-serif;
+  text-align: center;
+  border-radius: 2mm;
+  align-content: center;
+  column-gap: 0px;
+}
+
+.CommentAuthor {
+  grid-column: 1/2;
+  grid-row:1/2;
+  margin-left: 10px;
+  text-align: left;
+  font-size: 15px;
+  color: dimgrey;
+}
+
+.CommentBody {
+  grid-column: 1/2;
+  grid-row:2/2;
+  text-align: left;
+  font-size: 10px;
+  color: dimgrey;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  margin-left: 20px;
+}
+
+.CommentDate {
+  grid-column: 2/2;
+  grid-row:2/3;
+  margin-left: 20px;
+  text-align: left;
+  font-size: 8px;
+  color: dimgrey;
+}
+
+.DeleteComment {
+  grid-column: 2/2;
+  grid-row:1/2;
+  margin-left: 20px;
+  text-align: left;
+  font-size: 8px;
+  color: dimgrey;
+}
