--- a/src/App.css
+++ b/src/App.css
@@ -91,14 +91,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 150px;
 }
 
 .Login {
   grid-column: 5/6;
   grid-row: 1/1;
-  font-family: 'Alata', sans-serif;  font-size: 30px;
+  font-family: 'Alata', sans-serif;
   /* border: 1px black solid; */
   height: 100px;
+  width: 100px;
 }
 
 .ArticleDiv {
@@ -163,7 +165,10 @@
   overflow-y:scroll;
   grid-column: 1/3;
   grid-row: 2/5;
-  font-family: 'Alata', sans-serif;  font-size: 12px;
+  font-family: 'Alata', sans-serif;
+  color: dimgrey;
+  text-align: left;
+  margin: 15px;
   /* border: 1px black solid */
 }
 
@@ -214,7 +219,7 @@
   height:500px;
   grid-column: 1/4;
   grid-row: 2/2;
-  font-family: 'Alata', sans-serif;  font-size: 30px;
+  font-family: 'Alata', sans-serif;  font-size: 17px;
   /* border: 1px black solid */
 }
 
