--- a/src/App.css
+++ b/src/App.css
@@ -366,7 +366,7 @@
   padding: 5px;
   display: grid;
   grid-template-columns: 3fr 1fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 40px 2fr;
   background: #f0fafd;
   width: 3fr;
   font-family: 'Alata', sans-serif;
@@ -380,7 +380,7 @@
   padding: 5px;
   display: grid;
   grid-template-columns: 3fr 1fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 40px 2fr;
   background: white;
   width: 3fr;
   /* height: 8%; */
@@ -401,7 +401,7 @@
 }
 
 .CommentBody {
-  grid-column: 1/2;
+  grid-column: 1/4;
   grid-row:2/2;
   text-align: left;
   font-size: 10px;
@@ -413,19 +413,63 @@
 }
 
 .CommentDate {
-  grid-column: 2/2;
-  grid-row:2/3;
+  grid-column: 3/3;
+  grid-row:3/4;
   margin-left: 20px;
   text-align: left;
   font-size: 8px;
   color: dimgrey;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.CommentVotes {
+  grid-column: 3/3;
+  grid-row:1/2;
+  text-align: left;
+  font-size: 8px;
+  color: dimgrey;
+  height: 20px;
+  display:grid;
+  grid-template-columns: 1fr 2fr 1fr 2fr;
+}
+
+.CommentVoteCount {
+  grid-column: 3/4;
+  background: none;
+  border: none;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  width: 30px
+}
+
+.CommentUp {
+  grid-column: 2/3;
+  background: none;
+  /* border: none; */
+  font-size: 10px;
+  height: 1fr;
+}
+
+.CommentDown {
+  grid-column: 4/5;
+  background: none;
+  /* border: none; */
+  font-size: 10px;
+  height: 1fr;
 }
 
 .DeleteComment {
   grid-column: 2/2;
   grid-row:1/2;
   margin-left: 20px;
-  text-align: left;
+  text-align: center;
   font-size: 8px;
+  height: 25px;
+  width: 50px;
   color: dimgrey;
+
 }
