--- a/src/App.css
+++ b/src/App.css
@@ -147,17 +147,6 @@
   /* border: 1px black solid; */
 }
 
-.ArticlesList {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  overflow-y:scroll;
-  height: 500px;
-  grid-column: 1/4;
-  grid-row: 2/9;
-  font-family: 'Alata', sans-serif;  font-size: 30px;
-}
-
 .ArticleBody {
   display: flex;
   flex-direction: column;
@@ -273,14 +262,27 @@
   text-align: center;
 }
 
+.ArticlesList {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  overflow-y:scroll;
+  height: 500px;
+  grid-column: 1/5;
+  grid-row: 2/9;
+  font-family: 'Alata', sans-serif;  font-size: 30px;
+}
+
 .ListItemEven {
   padding: 5px;
   display: grid;
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
+  grid-column: 1/2;
+  grid-row: 1/2;
   background: #f0fafd;
   width: 3fr;
-  height: 8%;
+  height: 20%;
   font-family: 'Alata', sans-serif;
   text-align: center;
   border-radius: 2mm;
@@ -292,14 +294,22 @@
   display: grid;
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
+  grid-column: 1/2;
   list-style: none;
-  width: 3fr;
-  height: 8%;
+  grid-row: 1/2;
+  height: 18%;
   text-align: center;
   border-radius: 2mm;
   font-family: 'Alata', sans-serif;
   background:white;
   align-content: center;
+}
+
+.ArticleListItem {
+  grid-column: 1/3;
+  grid-row: 1/4;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
 .ArtCardTitle {
@@ -331,12 +341,14 @@
 }
 
 .ArtCardDate {
-  grid-column: 2/2;
+  grid-column: 1/2;
   grid-row:3/4;
   margin-left: 20px;
   text-align: left;
   font-size: 12px;
   color: dimgrey;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .ArtCardVotes {
