--- a/src/App.css
+++ b/src/App.css
@@ -428,6 +428,7 @@
   grid-column: 3/3;
   grid-row:3/4;
   margin-left: 20px;
+  margin-right: 6px;
   text-align: left;
   font-size: 8px;
   color: dimgrey;
