--- a/src/App.css
+++ b/src/App.css
@@ -295,9 +295,8 @@
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   grid-column: 1/2;
-  list-style: none;
   grid-row: 1/2;
-  height: 18%;
+  height: 20%;
   text-align: center;
   border-radius: 2mm;
   font-family: 'Alata', sans-serif;
@@ -349,17 +348,68 @@
   color: dimgrey;
   display: flex;
   flex-direction: row-reverse;
+  margin-bottom: 10px
+}
+
+.ArtCardComments {
+  grid-column: 1/2;
+  grid-row:1/2;
+  margin-left: 20px;
+  font-size: 12px;
+  color: dimgrey;
+  display: flex;
+  flex-direction: row-reverse;
+  align-content: center;
 }
 
 .ArtCardVotes {
   grid-column: 2/2;
   grid-row:1/2;
-  margin-left: 20px;
+  margin-left: 30px;
   text-align: left;
   font-size: 10px;
   color: dimgrey;
   text-decoration: none;
-  grid-template-columns: 1fr 1fr 1fr
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.ArtCardVoteCount {
+  grid-column: 2/3;
+  background: none;
+  border: none;
+  display: flex;
+  margin-top: 30px;
+  margin-left: 0%;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  font-size: 40px;
+
+  /* width: 30px */
+}
+
+.ArtCardUp {
+  grid-column: 1/2;
+  background: rgb(202, 202, 202);
+  height: 30px;
+  width: 60px;
+  margin-top: 45px;
+  margin-left: 45px;
+  border-radius: 2mm;
+  align-content: center;
+}
+
+.ArtCardDown {
+  grid-column: 3/4;
+  background: none;
+  border: none;
+  background: rgb(202, 202, 202);
+  border-radius: 2mm;
+  height: 30px;
+  width: 60px;
+  align-content: center;
+  margin-top: 45px;
 }
 
 .ArrowUpButton {
