--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,23 @@
   margin: 0px;
 }
 
+input:focus,
+select:focus,
+button:focus {
+  outline: none;
+    color: dimgrey;
+    background: transparent;
+    border: none;
+}
+
+textarea:focus {
+    outline: none;
+    color: dimgrey;
+    background: transparent;
+    border: none;
+    border-bottom: rgb(136, 136, 136) 1px solid;
+}
+
 .App {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -26,14 +43,16 @@
   grid-row: 2/3;
 }
 
+/* d9e3e6 */
+
 .App-Header {
-  background-color:  #e6f4f8;
+  background:  #8ac2d3;
   min-height: 100vh;
   display: grid;
   grid-template-columns: repeat(5 1fr);
   grid-template-rows: 100px;
   color: white;
-  grid-row: 1/1;
+  grid-row: 1/2;
   grid-column: 1/6;
 
 }
@@ -50,8 +69,7 @@
   grid-row: 1/1;
   font-family: 'Alata', sans-serif;
   font-size: 50px;
-  color: dimgrey;
-  /* border: 1px black solid; */
+  color: black;
   height: 100px;
   width: 1fr;
   text-align: center;
@@ -64,21 +82,74 @@
   justify-content: center;
   grid-column: 2/3;
   grid-row: 1/1;
-  font-family: 'Alata', sans-serif;
-  font-size: 40px;
-  /* border: 1px black solid; */
-  height: 100px;
   text-decoration: none;
 }
 
 .SearchBar {
   grid-column:3/4;
-  grid-row: 1/1;
+  grid-row: 1/3;
   font-family: 'Alata', sans-serif;
   font-size: 20px;
-  /* border: 1px black solid; */
   height: 100px;
+  background: transparent;
+  display: grid;
+  grid-template-columns: 70% 10% 20%;
+  grid-template-rows: 30% 20% 20% 30%;
 }
+
+.SearchInput {
+  grid-column: 1/2;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-top: 15%;
+  height: 30px;
+  text-align: center;
+  font-family: 'Alata', sans-serif;
+  font-size: 15px;
+  background: transparent;
+  border: none;
+  color: dimgrey
+}
+
+.SearchButtonLabel {
+  grid-column: 2/4;
+  grid-row: 2/4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.SearchButton {
+  background: rgb(212, 212, 212);
+  border: none;
+  height: 30px;
+  width: 50px;
+  text-align: center;
+  font-family: 'Alata', sans-serif;
+  border-radius: 1mm;
+  cursor: pointer;
+}
+
+/* .SearchButton:focus {
+  background: rgb(212, 212, 212);
+  border: none;
+  height: 30px;
+  width: 50px;
+  text-align: center;
+  font-family: 'Alata', sans-serif;
+  border-radius: 1mm;
+  cursor: pointer;
+}
+
+.SearchButtonLabel:focus {
+  grid-column: 2/4;
+  grid-row: 2/4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  cursor: pointer;
+} */
 
 .Username {
   grid-column: 4/5;
@@ -108,6 +179,15 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr repeat(1fr 4) 1fr;
   grid-row:2/3;
+  background: #f0fafd;
+}
+
+.ArticleDiv {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr repeat(1fr 4) 1fr;
+  grid-row:2/3;
+  background: #f0fafd;
 }
 
 .ArticlesHeader {
@@ -235,6 +315,11 @@
   height: 75px;
   width: 350px;
   display: flex;
+  outline: none;
+    color: dimgrey;
+    background: transparent;
+    border: none;
+    border-bottom: rgb(136, 136, 136) 1px solid;
 }
 
 
@@ -268,7 +353,7 @@
   /* justify-content: space-around; */
   overflow: hidden;
   overflow-y:scroll;
-  height: 500px;
+  height: 505px;
   grid-column: 1/5;
   grid-row: 2/9;
   font-family: 'Alata', sans-serif;  font-size: 30px;
