--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,16 @@
   margin: 0px;
 }
 
-input:focus,
-button:focus {
+input:focus{
   outline: none;
     color: dimgrey;
     background: transparent;
+    border: none;
+}
+
+button:focus {
+  outline: none;
+    color: dimgrey;
     border: none;
 }
 
@@ -39,7 +44,7 @@ textarea:focus {
 }
 
 .UserText {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Alata', sans-serif;
   font-size: 15px;
 }
 
@@ -240,16 +245,17 @@ textarea:focus {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr repeat(1fr 4) 1fr;
   grid-row:2/3;
+  height: 650px;
   background: #f0fafd;
 }
 
-.ArticleDiv {
+/* .ArticleDiv {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr repeat(1fr 4) 1fr;
   grid-row:2/3;
   background: #f0fafd;
-}
+} */
 
 .ArticlesHeader {
   grid-column: 1/3;
@@ -332,8 +338,111 @@ textarea:focus {
   display:grid;
   grid-template-rows: 15px 15px 12px 5px;
   grid-row-gap: 20px;
+  margin-left: 10px;
+  margin-top: 10px;
   font-family: 'Alata', sans-serif;  height: 100px;
+  border-bottom: 3px  rgb(80, 79, 79) solid;
+}
+
+.IndiHeaderTitle {
+  grid-row: 1/2;
   /* border: 1px black solid; */
+  font-family: 'Alata', sans-serif;
+  font-size: 30px;
+  color: rgb(80, 79, 79);  text-align: left;
+  margin-left: 10px
+}
+
+.IndiHeaderAuthor {
+  grid-row: 2/3;
+  /* border: 1px black solid; */
+  font-family: 'Alata', sans-serif;
+  font-size: 20px;
+  color: rgb(80, 79, 79);
+  text-align: left;
+  margin-top: 5px;
+  margin-left: 11px
+}
+
+.IndiHeaderTopic {
+  grid-row: 3/4;
+  /* border: 1px black solid; */
+  font-family: 'Alata', sans-serif;
+  color: rgb(80, 79, 79);  font-size: 12px;
+  text-align: left;
+  margin-left: 13px;
+  margin-top: 5px;
+}
+
+.IndiHeaderDate {
+  grid-row: 3/4;
+  grid-column: 2/3;
+  font-family: 'Alata', sans-serif;
+  font-size: 10px;
+  text-align: left;
+  margin-left: 13px;
+  margin-top: 7px;
+  color: rgb(80, 79, 79);  font-size: 12px;
+}
+
+/* .IndiHeaderVotes {
+  grid-row: 1/2;
+  border: 1px black solid;
+} */
+
+.ArticlePosition {
+  grid-column: 2/3;
+  grid-row: 1/4;
+  display: grid;
+  grid-template-columns: 10% 30% 20% 30% 10%;
+  margin-top: 0px;
+  height: 50px;
+  width: 400px;
+  /* border: 1px black solid; */
+}
+
+.ArticleVoteCount {
+  grid-column: 3/4;
+  width: 20px;
+  background: none;
+  /* border: 1px black solid; */
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  font-family: 'Alata', sans-serif;
+  justify-content: center;
+  margin-left: 20px;
+  margin-bottom: 5px;
+  font-size: 30px;
+  color: dimgrey;
+}
+
+.ArticleUp {
+  grid-column: 2/3;
+  background: rgb(202, 202, 202);
+  height: 20px;
+  width: 100px;
+  border-radius: 2mm;
+  font-family: 'Alata', sans-serif;
+  align-content: center;
+  cursor: pointer;
+  /* border: 1px black solid; */
+  margin-top:15px;
+
+}
+
+
+.ArticleDown {
+  grid-column: 4/5;
+  background: rgb(202, 202, 202);
+  height: 20px;
+  width: 100px;
+  font-family: 'Alata', sans-serif;
+  border-radius: 2mm;
+  align-content: center;
+  cursor: pointer;
+  /* border: 1px black solid; */
+  margin-top:15px;
 }
 
 .ArticleBody {
@@ -410,12 +519,19 @@ textarea:focus {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  width: 80px;
   /* border: 1px black solid; */
 }
 
 .CommentsButton {
   grid-row: 1/2;
-  height: 1fr;
+  margin-top: 30px;
+  height: 30px;
+  width: 100px;
+  margin-left: 135px;
+  font-family: 'Alata', sans-serif;
+  background: rgb(202, 202, 202);
+  border-radius: 0.5mm;
 }
 
 .LeaveComment {
@@ -425,10 +541,17 @@ textarea:focus {
   width: 350px;
   display: flex;
   outline: none;
-    color: dimgrey;
-    background: transparent;
-    border: none;
-    border-bottom: rgb(136, 136, 136) 1px solid;
+  background: transparent;
+  font-family: 'Alata', sans-serif;
+  font-size: 12px;
+  border: none;
+  border-bottom: rgb(136, 136, 136) 1px solid;
+}
+
+.PleaseLogIn {
+  font-family: 'Alata', sans-serif;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
 
@@ -439,7 +562,7 @@ textarea:focus {
   /* justify-content: center; */
   overflow: hidden;
   overflow-y:scroll;
-  height: 500px;
+  height: 530px;
   grid-column: 4/4;
   grid-row: 2/2;
   font-family: Arial, Helvetica, sans-serif;
@@ -450,6 +573,16 @@ textarea:focus {
 .ShowCommentsButton {
   grid-column: 1/1;
   grid-row: 1/2;
+}
+
+.LeaveCommentButton {
+  background: rgb(214, 214, 214);
+  height: 30px;
+  width: 70px;
+  border: none;
+  border-radius: 0.5mm;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .Loading {
@@ -583,6 +716,7 @@ textarea:focus {
   border: none;
   display: flex;
   margin-top: 30%;
+  font-family: 'Alata', sans-serif;
   flex-direction: row;
   align-content: center;
   justify-content: center;
@@ -593,11 +727,12 @@ textarea:focus {
 
 .ArtCardUp {
   grid-column: 1/2;
-  background: rgb(202, 202, 202);
-  height: 35%;
   width: 50%;
   margin-top: 41%;
   margin-left: 50%;
+  background: rgb(202, 202, 202);
+  font-family: 'Alata', sans-serif;
+  height: 35%;
   border-radius: 2mm;
   align-content: center;
   cursor: pointer;
@@ -608,6 +743,7 @@ textarea:focus {
   background: none;
   border: none;
   background: rgb(202, 202, 202);
+  font-family: 'Alata', sans-serif;
   border-radius: 2mm;
   height: 35%;
   width: 50%;
@@ -671,7 +807,7 @@ textarea:focus {
   grid-column: 1/4;
   grid-row:2/2;
   text-align: left;
-  font-size: 10px;
+  font-size: 12px;
   color: dimgrey;
   display: flex;
   flex-direction: column;
@@ -738,6 +874,7 @@ textarea:focus {
   font-size: 8px;
   height: 25px;
   width: 50px;
-  color: dimgrey;
-
+  background: rgb(202, 202, 202);
+  font-family: 'Alata', sans-serif;
+  border-radius: 0.5mm
 }
