--- a/src/App.css
+++ b/src/App.css
@@ -336,7 +336,7 @@ textarea:focus {
   grid-column: 1/4;
   grid-row: 1/1;
   display:grid;
-  grid-template-rows: 15px 15px 12px 5px;
+  grid-template-rows: 20px 15px 12px 5px;
   grid-row-gap: 20px;
   margin-left: 10px;
   margin-top: 10px;
@@ -350,7 +350,17 @@ textarea:focus {
   font-family: 'Alata', sans-serif;
   font-size: 30px;
   color: rgb(80, 79, 79);  text-align: left;
-  margin-left: 10px
+  margin-left: 10px;
+}
+
+.IndiHeaderTitle2 {
+  grid-row: 1/2;
+  font-family: 'Alata', sans-serif;
+  font-size: 20px;
+  height:50px;
+  color: rgb(80, 79, 79);  text-align: left;
+  margin-left: 10px;
+  margin-bottom: 10px;
 }
 
 .IndiHeaderAuthor {
@@ -361,6 +371,17 @@ textarea:focus {
   color: rgb(80, 79, 79);
   text-align: left;
   margin-top: 5px;
+  margin-left: 11px
+}
+
+.IndiHeaderAuthor2 {
+  grid-row: 2/3;
+  /* border: 1px black solid; */
+  font-family: 'Alata', sans-serif;
+  font-size: 17px;
+  color: rgb(80, 79, 79);
+  text-align: left;
+  margin-top: 15px;
   margin-left: 11px
 }
 
@@ -528,7 +549,7 @@ textarea:focus {
   margin-top: 30px;
   height: 30px;
   width: 100px;
-  margin-left: 135px;
+  margin-left: 128px;
   font-family: 'Alata', sans-serif;
   background: rgb(202, 202, 202);
   border-radius: 0.5mm;
@@ -581,6 +602,7 @@ textarea:focus {
   width: 70px;
   border: none;
   border-radius: 0.5mm;
+  font-family: 'Alata', sans-serif;
   margin-top: 5px;
   margin-bottom: 5px;
 }
@@ -844,26 +866,38 @@ textarea:focus {
   background: none;
   border: none;
   display: flex;
+  font-family: 'Alata', sans-serif;
+  font-size: 12px;
   flex-direction: row;
   align-content: center;
   justify-content: center;
-  width: 30px
+  width: 20px;
+  margin-top: 2px;
+  margin-left: 5px;
 }
 
 .CommentUp {
   grid-column: 2/3;
   background: none;
   /* border: none; */
+  border-radius: 0.5mm;
+  font-family: 'Alata', sans-serif;
+  background: rgb(214, 214, 214);
   font-size: 10px;
   height: 1fr;
+  width: 60px
 }
 
 .CommentDown {
   grid-column: 4/5;
   background: none;
+  border-radius: 0.5mm;
   /* border: none; */
-  font-size: 10px;
+  font-family: 'Alata', sans-serif;
+  background: rgb(214, 214, 214);
+    font-size: 10px;
   height: 1fr;
+  width: 60px;
 }
 
 .DeleteComment {
