--- a/src/App.css
+++ b/src/App.css
@@ -1041,10 +1041,12 @@ textarea:focus {
   .Logo {
     text-align: center;
     font-size: 50px;
+    display: flex;
+    align-content: center;
   }
 
   .SearchBar {
-    margin-left: 70px;
+    margin-left: 15%;
   }
 
   .SearchButton {
@@ -1054,6 +1056,7 @@ textarea:focus {
 
   .HomeButton {
     margin-top: 30px;
+    margin-left: 50%;
   }
 
   .Username {
@@ -1067,8 +1070,8 @@ textarea:focus {
   .Login {
     grid-column: 3/4;
     grid-row: 2/3;
-    margin-left: 75px;
-    margin-bottom: 40px;
+    margin-right: 75px;
+    display: flex;
   }
 
   .Main {
@@ -1084,10 +1087,107 @@ textarea:focus {
   }
 }
 
+@media only screen and (max-width: 730px) {
+  .ArticlesHeader {
+    font-size: 30px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .Login {
+    margin-left: 3%;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .SearchBar {
+    margin-left: 5%;
+  }
+
+  .Logo {
+    margin-left: 20%;
+  }
+
+  .HomeButton {
+    margin-left: 35%;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .Main {
+    margin-top: 130px;
+  }
+
+  .App-Header {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 70px 60px 75px;
+  }
+
+  .Username {
+    grid-row: 3/4;
+  }
+
+  .Login {
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+
+  .SearchBar {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    margin-left: 30%;
+    width: 50%;
+  }
+
+  .Logo {
+    grid-column: 1/2;
+    /* width: 100px; */
+    margin-left: 35%;
+  }
+
+  .HomeButton {
+    grid-column: 2/3;
+    width: 50px;
+    margin-left: 40%;
+    margin-top: 45px;
+  }
+}
+
+@media only screen and (max-width: 638px) {
+  .Logo {
+    font-size: 45px;
+  }
+}
+
+@media only screen and (max-width: 588px) {
+  .Logo {
+    font-size: 45px;
+  }
+}
+
+@media only screen and (max-width: 545px) {
+  .App-Header {
+    grid-template-rows: 70px 60px 75px 75px;
+  }
+
+  .SearchBar {
+    margin-left: 25%;
+  }
+
+  .Username {
+    grid-column: 2/3;
+    grid-row: 4/5;
+  }
+
+  .Main {
+    margin-top: 200px;
+  }
+}
+
 .App {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 100px 6fr 1fr;
+  grid-template-rows: 100px 6fr;
   text-align: center;
   height: 100vh;
 }
