--- a/src/App.css
+++ b/src/App.css
@@ -1165,22 +1165,157 @@ textarea:focus {
   }
 }
 
-@media only screen and (max-width: 545px) {
+@media only screen and (max-width: 551px) {
+  .Logo {
+    font-size: 30px;
+    width: 50%;
+  }
+
+  .HomeButton {
+    grid-column: 2/3;
+    width: 50%;
+    margin-left: 40%;
+    margin-right: 40%;
+    width: 20%;
+    margin-top: 45px;
+  }
+
   .App-Header {
-    grid-template-rows: 70px 60px 75px 75px;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 70px 60px 75px 50px;
   }
 
   .SearchBar {
+    grid-column: 1/3;
+    /* margin-right: 80%; */
     margin-left: 25%;
+    width: 30%;
   }
 
   .Username {
-    grid-column: 2/3;
+    grid-column: 1/3;
     grid-row: 4/5;
+    margin-top: 0px;
+    margin-left: 35%;
+    margin-right: 35%;
+    width: 30%;
+  }
+
+  .Login {
+    grid-column: 1/3;
+    margin-left: 25%;
+    margin-right: 25%;
+    width: 50%;
+  }
+
+  .Main {
+    margin-top: 150px;
+  }
+}
+
+@media only screen and (max-width: 449px) {
+  .App-Header {
+    grid-template-rows: 70px 60px 75px 50px;
+  }
+
+  .SearchBar {
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+
+  .Logo {
+    margin-left: 40%;
+    width: 60%;
+  }
+
+  .Login {
+    grid-column: 1/3;
+    margin-left: 20%;
+    margin-right: 20%;
+    width: 60%;
+  }
+
+  .Username {
+    grid-column: 1/3;
+    grid-row: 4/5;
+    margin-left: 30%;
+    margin-right: 30%;
+    width: 40%;
+  }
+
+  .Main {
+    margin-top: 170px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .App-Header {
+    grid-template-rows: 70px 50px 60px 75px 50px;
+  }
+
+  .SearchBar {
+    grid-row: 3/4;
+    margin-left: 20%;
+    width: 20%;
+  }
+
+  .Logo {
+    grid-column: 1/3;
+    margin-right: 0%;
+    margin-left: 0%;
+    width: 100%;
+  }
+
+  .Login {
+    grid-row: 4/5;
+    grid-column: 1/3;
+    margin-left: 20%;
+    width: 50%;
+  }
+
+  .Username {
+    grid-column: 1/3;
+    grid-row: 5/6;
+    margin-left: 33%;
+    width: 40%;
+  }
+
+  .HomeButton {
+    grid-row: 2/3;
+    grid-column: 1/3;
+    margin-left: 0%;
+    margin-right: 0%;
+    width: 100%;
   }
 
   .Main {
     margin-top: 200px;
+  }
+}
+
+@media only screen and (max-width: 417px) {
+  .Logo {
+    font-size: 30px;
+    width: 100%;
+    margin-top: 5%;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .Logo {
+    font-size: 30px;
+    width: 100%;
+    margin-top: 5%;
+    margin-right: 50%;
+  }
+}
+
+@media only screen and (max-width: 407px) {
+  .Logo {
+    font-size: 30px;
+    width: 100%;
+    margin-top: 3%;
+    margin-left: 20%;
   }
 }
 
